--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Johanna Hartke. Updated November 2018. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Johanna Hartke. Updated November 2018. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Hosted by <a href:"https://pages.github.com">GitHub Pages</a></li>
 							</ul>
 						</div>
 					</section>
