changed section headers

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">Home</a></li>
-						<li><a href="#two">About Me</a></li>
-						<li><a href="#three">Research</a></li>
-						<li><a href="#four">Publications</a></li>
-						<li><a href="#five">Contact</a></li>
+						<li><a href="#home" class="active">Home</a></li>
+						<li><a href="#about">About Me</a></li>
+						<li><a href="#research">Research</a></li>
+						<li><a href="#publications">Publications</a></li>
+						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -45,7 +45,7 @@
 					<div id="main">
 
 						<!-- One -->
-							<section id="one">
+							<section id="home">
 								<div class="image main" data-position="center">
 									<img src="images/banner.jpg" alt="" />
 								</div>
@@ -58,7 +58,7 @@
 							</section>
 
 						<!-- Two -->
-							<section id="two">
+							<section id="about">
 								<div class="container">
 									<h3>About Me</h3>
 									<article>
@@ -76,7 +76,7 @@
 							</section>
 
 						<!-- Three -->
-							<section id="three">
+							<section id="research">
 								<div class="container">
 									<h3>Research</h3>
 									<p>I am interested in the formation, evolution, and dynamics of galaxies ranging from our own Milky Way to the most massive galaxies found at the centres of galaxy clusters. In my <a href="https://edoc.ub.uni-muenchen.de/23027/1/Hartke_Johanna.pdf"> PhD research</a> I started using Planetary Nebulae (PNe) as kinematic tracers for the build-up of the extended halos of massive early-type galaxies. Below is a selection of current and past research projects that I have been involved in. </p>
@@ -130,7 +130,7 @@
 							</section>
 
 							<!-- Four -->
-								<section id="four">
+								<section id="publications">
 									<div class="container">
 										<h3>Publications</h3>
 										<!-- USE ADS QUERY <li>%ZEncoding:html<P>%a %Y, %J, <A href="%u">%T</A></li> -->
@@ -178,7 +178,7 @@
 							</section>
 
 						<!-- Five -->
-							<section id="five">
+							<section id="contact">
 								<div class="container">
 									<h3>Contact</h3>
 									<ul class="feature-icons">
