--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
 										</ul>
 										<h4> Refereed </h4>
 									<ul class="alt">
+										<li><P>Bhattacharya, S., Arnaboldi, M., <b>Hartke, J.</b>, Gerhard, O., Comte, V., McConnachie, A., Harris, W. E. &amp; Caldwell, N. 2019, accepted for publication in Astronomy and Astrophysics, <A href="https://ui.adsabs.harvard.edu/#abs/2019arXiv190302597B/abstract">The survey of Planetary Nebulae in Andromeda (M31): I. Imaging the disk and halo with MegaCam@CFHT</A></li>
 										<li><P><b>Hartke, J.</b>, Arnaboldi, M., Gerhard, O., Agnello, A., Longobardi, A.,
 										Coccato, L., Pulsoni, C., Freeman, K. C. &amp; Merrifield, M. 2018, Astronomy
 										and Astrophysics, <A
