--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 										<p>Born and raised in a small town in the north of Germany, I moved to Bremen to pursue a Bachelor of Science in Physics at Jacobs University (2010 - 2013). During my undergraduate, I had the chance to participate in the DAAD RISE worldwide internship programme. During my intership at the School of Astronomy and Astrophysics of the Australian National University my motivation to pursue a career in Astronomy was fostered. </p>
 										<p>For my Master of Science (2013 - 2015) I moved to the University of Groningen in the Netherlands, at whose Kapteyn Institute I had already completed parts of my Bachelor Research Project. There, I gained first observational experience during two observing runs with the Isaac Newton and William Herschel Telescopes at the Roque de los Muchachos, La Palma.</p>
 										<p><span class="image left"><img src="images/phdhat.jpg" width="50%" height="scale" alt="PhD hat" /></span>From 2015 to 2018 I was a PhD student at the European Southern Observatory as part of the International Max Planck Research School (IMPRS) on Astrophysics at the LMU Munich. I successfully defended my PhD thesis titled <a href="https://edoc.ub.uni-muenchen.de/23027/1/Hartke_Johanna.pdf"> "Substructures, accretion events, and diffuse intra-group light surrounding bright early-type galaxies"</a> in September 2018. In November 2018 I took up a postdoctoral fellowship at the European Southern Observatory in Santiago de Chile with observational duties at the Very Large Telescope at Paranal Observatory.</p>
-										When I am not working on my research projects, one is likely to find me rehearsing music. While living in Munich, I was a soprano in the Münchner Motettenchor <a href:"http://www.muenchner-motettenchor.de"> (MMC)</a>. I also enjoy swimming, bouldering, windsurfing, and reading. </p>
+										When I am not working on my research projects, one is likely to find me rehearsing music. While living in Munich, I was a soprano in the Münchner Motettenchor <a href:"http://www.muenchner-motettenchor.de"> (MMC)</a>. I also enjoy swimming, bouldering, windsurfing, and reading. Since moving to Chile and marvelling at the southern skies, I took up (astro)photography. </p>
 									</article>
 									<ul class="actions">
 										<li><a href="cv_johanna_hartke.pdf" class="button primary icon fa-download">Download my Curriculum Vitae</a></li>
@@ -142,7 +142,7 @@
 										</ul>
 										<h4> Refereed </h4>
 									<ul class="alt">
-										<li><P>Bhattacharya, S., Arnaboldi, M., <b>Hartke, J.</b>, Gerhard, O., Comte, V., McConnachie, A., Harris, W. E. &amp; Caldwell, N. 2019, accepted for publication in Astronomy and Astrophysics, <A href="https://ui.adsabs.harvard.edu/#abs/2019arXiv190302597B/abstract">The survey of Planetary Nebulae in Andromeda (M31): I. Imaging the disk and halo with MegaCam@CFHT</A></li>
+										<li><P>Bhattacharya, S., Arnaboldi, M., <b>Hartke, J.</b>, Gerhard, O., Comte, V., McConnachie, A., Harris, W. E. &amp; Caldwell, N. 2019, Astronomy and Astrophysics, <A href="https://ui.adsabs.harvard.edu/abs/2019A%26A...624A.132B/abstract">The survey of Planetary Nebulae in Andromeda (M31): I. Imaging the disk and halo with MegaCam@CFHT</A></li>
 										<li><P><b>Hartke, J.</b>, Arnaboldi, M., Gerhard, O., Agnello, A., Longobardi, A.,
 										Coccato, L., Pulsoni, C., Freeman, K. C. &amp; Merrifield, M. 2018, Astronomy
 										and Astrophysics, <A
@@ -207,7 +207,7 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Johanna Hartke. Updated November 2018. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Hosted by <a href:"https://pages.github.com">GitHub Pages</a></li>
+								<li>&copy; Johanna Hartke. Updated April 2019. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Hosted by <a href:"https://pages.github.com">GitHub Pages</a></li>
 							</ul>
 						</div>
 					</section>
