--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 						<li><a href="#home" class="active">Home</a></li>
 						<li><a href="#about">About Me</a></li>
 						<li><a href="#research">Research</a></li>
+						<li><a href="#talks">Upcoming talks</a></li>
 						<li><a href="#publications">Publications</a></li>
 						<li><a href="#contact">Contact</a></li>
 					</ul>
@@ -130,6 +131,43 @@
 							</section>
 
 							<!-- Four -->
+							<section id="talks">
+								<div class="container">
+									<h3>Upcoming Talks</h3>
+									<p>I am always happy to present my research at conferences or at institute seminars. In case you are interested to learn more about my current research, below is a list of upcoming talks: </p>
+									<table>
+										<thead>
+											<tr>
+												<th>When?</th>
+												<th>Where?</th>
+												<th>What?</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td>13 June 2019</td>
+												<td>Conference: Light in the Suburbs (Sexten, IT)</td>
+												<td>Low-mass and metal-poor satellites as progenitors of the intragroup light stars around M49: a challenge for hydrodynamical simulations?</td>
+											</tr>
+											<tr>
+												<td>19 June 2019</td>
+												<td>Wine and Cheese Seminar (ESO, DE)</td>
+												<td>Intragroup light and dark matter surrounding M105 in the Leo I Group</td>
+											</tr>
+											<tr>
+												<td>1 July 2019</td>
+												<td>Lunch talk (Kapteyn Astronomical Institute, Groningen, NL)</td>
+												<td>Using planetary nebulae as tracers of galaxy halo assembly in galaxy groups and clusters</td>
+											</tr>
+										</tbody>
+										<tfoot>
+											<!-- dummy -->
+										</tfoot>
+									</table>
+								</div>
+								</section>
+
+							<!-- Five -->
 								<section id="publications">
 									<div class="container">
 										<h3>Publications</h3>
@@ -178,7 +216,7 @@
 							</div>
 							</section>
 
-						<!-- Five -->
+						<!-- Six -->
 							<section id="contact">
 								<div class="container">
 									<h3>Contact</h3>
@@ -207,7 +245,7 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Johanna Hartke. Updated April 2019. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Hosted by <a href:"https://pages.github.com">GitHub Pages</a></li>
+								<li>&copy; Johanna Hartke. Updated May 2019. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Hosted by <a href:"https://pages.github.com">GitHub Pages</a></li>
 							</ul>
 						</div>
 					</section>
