Updated talk list and cv

--- a/index.html
+++ b/index.html
@@ -145,19 +145,14 @@
 										</thead>
 										<tbody>
 											<tr>
-												<td>13 June 2019</td>
-												<td>Conference: Light in the Suburbs (Sexten, IT)</td>
-												<td>Low-mass and metal-poor satellites as progenitors of the intragroup light stars around M49: a challenge for hydrodynamical simulations?</td>
-											</tr>
-											<tr>
-												<td>1 July 2019</td>
-												<td>Lunch talk (Kapteyn Astronomical Institute, Groningen, NL)</td>
-												<td>Using planetary nebulae as tracers of galaxy halo assembly in galaxy groups and clusters</td>
-											</tr>
-											<tr>
 												<td>17 July 2019</td>
 												<td>Wine and Cheese Seminar (ESO, DE)</td>
 												<td>Intragroup light and dark matter surrounding M105 in the Leo I Group</td>
+											</tr>
+											<tr>
+												<td>14 August 2019</td>
+												<td>Thirty Minute Talk (ESO, CL)</td>
+												<td>Light in the suburbs: a conference summary and spotlight on M49ß</td>
 											</tr>
 										</tbody>
 										<tfoot>
