--- a/index.html
+++ b/index.html
@@ -145,14 +145,9 @@
 										</thead>
 										<tbody>
 											<tr>
-												<td>17 July 2019</td>
-												<td>Wine and Cheese Seminar (ESO, DE)</td>
-												<td>Intragroup light and dark matter surrounding M105 in the Leo I Group</td>
-											</tr>
-											<tr>
 												<td>14 August 2019</td>
 												<td>Thirty Minute Talk (ESO, CL)</td>
-												<td>Light in the suburbs: a conference summary and spotlight on M49ß</td>
+												<td>Light in the suburbs: a conference summary and spotlight on M49</td>
 											</tr>
 										</tbody>
 										<tfoot>
