Updated address info

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 									<h3>Contact</h3>
 									<ul class="feature-icons">
 										<li class="fa-globe"><div class="address">
-																			  <div><b>Johanna Hartke</b></div>
+																			  <div><b>Dr. Johanna Hartke</b></div>
 																			  <div>European Southern Observatory</div>
 																			  <div>Alonso de C&oacute;rdova 3107</div>
 																				<div>Vitacura, Casilla 19001</div>
@@ -235,7 +235,7 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Johanna Hartke. Updated May 2019. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Hosted by <a href:"https://pages.github.com">GitHub Pages</a></li>
+								<li>&copy; Johanna Hartke. Updated July 2019. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Hosted by <a href:"https://pages.github.com">GitHub Pages</a></li>
 							</ul>
 						</div>
 					</section>
