Updated with most recent publications

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 								<section id="publications">
 									<div class="container">
 										<h3>Publications</h3>
-										<!-- USE ADS QUERY <li>%ZEncoding:html<P>%a %Y, %J, <A href="%u">%T</A></li> -->
+										<!-- USE ADS QUERY <li>%ZEncoding:html<P>%e %Y, %J, <A href="%u">%T</A></li> -->
 										<ul class="feature-icons">
 											<li class="fa-book"><a href="https://ui.adsabs.harvard.edu/#search/filter_database_fq_database=AND&filter_database_fq_database=database%3A%22astronomy%22&fq=%7B!type%3Daqp%20v%3D%24fq_database%7D&fq_database=(database%3A%22astronomy%22)&q=(%20author%3A%22Hartke%2C%20Johanna%22%20AND%20year%3A2014-2021)&sort=date%20desc%2C%20bibcode%20desc&p_=0">Query ADS</a></li>
 											<li class="fa-book">
@@ -143,6 +143,7 @@
 										</ul>
 										<h4> Refereed </h4>
 									<ul class="alt">
+										<li><P>Bhattacharya, S., Arnaboldi, M., Caldwell, N., Gerhard, O., Blaña, M., McConnachie, A., <b>Hartke, J.</b>, Guhathakurta, P., Pulsoni, C., and Freeman, K.C. 2019, arXiv e-prints, <A href="https://ui.adsabs.harvard.edu/abs/2019arXiv190909724B">The survey of Planetary Nebulae in Andromeda (M31) II. Age-velocity dispersion relation in the disc from Planetary Nebulae</A></li>
 										<li><P>Bhattacharya, S., Arnaboldi, M., <b>Hartke, J.</b>, Gerhard, O., Comte, V., McConnachie, A., Harris, W. E. &amp; Caldwell, N. 2019, Astronomy and Astrophysics, <A href="https://ui.adsabs.harvard.edu/abs/2019A%26A...624A.132B/abstract">The survey of Planetary Nebulae in Andromeda (M31): I. Imaging the disk and halo with MegaCam@CFHT</A></li>
 										<li><P><b>Hartke, J.</b>, Arnaboldi, M., Gerhard, O., Agnello, A., Longobardi, A.,
 										Coccato, L., Pulsoni, C., Freeman, K. C. &amp; Merrifield, M. 2018, Astronomy
@@ -161,6 +162,7 @@
 									</ul>
 								<h4> Conference Proceedings </h4>
 							<ul class="alt">
+								<li><P><b>Hartke, J.</b> 2019, Light in the Suburbs: Structure and Chemodynamics of Galaxy Halos. Proceedings of the conference held 9-14 June, <A href="https://ui.adsabs.harvard.edu/abs/2019lssc.confE..18H">What are the progenitors of the intragroup light stars around M49?</A></li>
 								<li><P><b>Hartke, J.</b>, Arnaboldi, M., Longobardi, A., Gerhard, O., Freeman, K. &amp;
 								Okamura, S. 2017, Planetary Nebulae: Multi-Wavelength Probes of Stellar and
 								Galactic Evolution, <A
