--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 										</ul>
 										<h4> Refereed </h4>
 									<ul class="alt">
-										<li><P>Bhattacharya, S., Arnaboldi, M., Caldwell, N., Gerhard, O., Blaña, M., McConnachie, A., <b>Hartke, J.</b>, Guhathakurta, P., Pulsoni, C., and Freeman, K.C. 2019, arXiv e-prints, <A href="https://ui.adsabs.harvard.edu/abs/2019arXiv190909724B">The survey of Planetary Nebulae in Andromeda (M31) II. Age-velocity dispersion relation in the disc from Planetary Nebulae</A></li>
+										<li><P>Bhattacharya, S., Arnaboldi, M., Caldwell, N., Gerhard, O., Blaña, M., McConnachie, A., <b>Hartke, J.</b>, Guhathakurta, P., Pulsoni, C., and Freeman, K.C. 2019, Astronomy and Astrophysics, <A href="https://ui.adsabs.harvard.edu/abs/2019A&amp;A...631A..56B">The survey of planetary nebulae in Andromeda (M 31). II. Age-velocity dispersion relation in the disc from planetary nebulae</A></li>
 										<li><P>Bhattacharya, S., Arnaboldi, M., <b>Hartke, J.</b>, Gerhard, O., Comte, V., McConnachie, A., Harris, W. E. &amp; Caldwell, N. 2019, Astronomy and Astrophysics, <A href="https://ui.adsabs.harvard.edu/abs/2019A%26A...624A.132B/abstract">The survey of Planetary Nebulae in Andromeda (M31): I. Imaging the disk and halo with MegaCam@CFHT</A></li>
 										<li><P><b>Hartke, J.</b>, Arnaboldi, M., Gerhard, O., Agnello, A., Longobardi, A.,
 										Coccato, L., Pulsoni, C., Freeman, K. C. &amp; Merrifield, M. 2018, Astronomy
@@ -210,7 +210,7 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Johanna Hartke. Updated August 2019. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Hosted by <a href:"https://pages.github.com">GitHub Pages</a></li>
+								<li>&copy; Johanna Hartke. Updated October 2019. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Hosted by <a href:"https://pages.github.com">GitHub Pages</a></li>
 							</ul>
 						</div>
 					</section>
