Info about LS school and internship opportunities

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 						<li><a href="#home" class="active">Home</a></li>
 						<li><a href="#about">About Me</a></li>
 						<li><a href="#research">Research</a></li>
+						<li><a href="#talks">Upcoming Talks</a></li>
 						<li><a href="#publications">Publications</a></li>
+						<li><a href="#opportunities">Opportunities for Students</a></li>
 						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</nav>
@@ -129,8 +131,40 @@
 									</div>
 							</section>
 
-
 							<!-- Four -->
+							<section id="talks">
+								<div class="container">
+									<h3>Upcoming Talks</h3>
+									<p>I am always happy to present my research at conferences or at institute seminars. In case you are interested to learn more about my current research, below is a list of upcoming talks: </p>
+									<table>
+										<thead>
+											<tr>
+												<th>When?</th>
+												<th>Where?</th>
+												<th>What?</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td>10 December 2019</td>
+												<td>Cake Talk (DARK Copenhagen, Denmark)</td>
+												<td>Planetary nebulae to trace halo assembly in galaxy groups and clusters</td>
+											</tr>
+											<tr>
+												<td>7 February 2020</td>
+												<td>La Silla Observing School lecture</td>
+												<td>Science at ESO: Galaxy halos </td>
+											</tr>
+										</tbody>
+										<tfoot>
+											<!-- dummy -->
+										</tfoot>
+									</table>
+								</div>
+								</section>
+
+
+							<!-- Five -->
 								<section id="publications">
 									<div class="container">
 										<h3>Publications</h3>
@@ -181,7 +215,25 @@
 							</div>
 							</section>
 
-						<!-- Five -->
+							<!-- Six -->
+								<section id="opportunities">
+									<div class="container">
+										<h3>Opportunities for Students</h3>
+										<article>
+											<h4>DAAD RISE worldwide intership</h4>
+											<p>The DAAD RISE worldwide internship programme offers funding for German undergraduate students to carry out an internship abroad. Being a DAAD Alumna myself, I am happy to announce that this year I will offer a project at ESO Vitacura, Santiago, Chile. You can find the project description, and all the requirements on the DAAD website. Feel free to contact me in case you have any questions regarding the project!</p>
+											<ul class="actions fit">
+												<li><a href="https://www.daad.de/rise/en/rise-worldwide/" class="button primary fit small">Apply on the DAAD RISE worldwide website</a></li>
+											</ul>
+											<h4>ESO studentship</h4>
+											<p>Together with my collaborator Dr. Magda Arnaboldi, we off an ESO studentship project titled "The origin of the blue stellar halos around Massive Group-Dominant Galaxies". The project description can be found <a href="https://www.eso.org/sci/activities/thesis-topics/abstr-arnaboldi4.html">here</a> and general information regarding the ESO studentship is linked <a href="https://www.eso.org/sci/activities/FeSt-overview/ESOstudentship.html">here</a>.</p>
+										</article>
+									</div>
+								</section>
+
+
+
+						<!-- Seven -->
 							<section id="contact">
 								<div class="container">
 									<h3>Contact</h3>
@@ -210,7 +262,7 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Johanna Hartke. Updated October 2019. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Hosted by <a href:"https://pages.github.com">GitHub Pages</a></li>
+								<li>&copy; Johanna Hartke. Updated November 2019. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Hosted by <a href:"https://pages.github.com">GitHub Pages</a></li>
 							</ul>
 						</div>
 					</section>
