--- a/index.html
+++ b/index.html
@@ -146,11 +146,6 @@
 										</thead>
 										<tbody>
 											<tr>
-												<td>10 December 2019</td>
-												<td>Cake Talk (DARK Copenhagen, Denmark)</td>
-												<td>Planetary nebulae to trace halo assembly in galaxy groups and clusters</td>
-											</tr>
-											<tr>
 												<td>7 February 2020</td>
 												<td>La Silla Observing School lecture</td>
 												<td>Science at ESO: Galaxy halos </td>
@@ -175,7 +170,7 @@
 											<div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0002-8745-689X" href="https://orcid.org/0000-0002-8745-689X" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:middle;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">orcid.org/0000-0002-8745-689X</a></div>
 											</li>
 										</ul>
-										<h4> Refereed </h4>
+										<h4> Refereed publications</h4>
 									<ul class="alt">
 										<li><P>Bhattacharya, S., Arnaboldi, M., Caldwell, N., Gerhard, O., Blaña, M., McConnachie, A., <b>Hartke, J.</b>, Guhathakurta, P., Pulsoni, C., and Freeman, K.C. 2019, Astronomy and Astrophysics, <A href="https://ui.adsabs.harvard.edu/abs/2019A&amp;A...631A..56B">The survey of planetary nebulae in Andromeda (M 31). II. Age-velocity dispersion relation in the disc from planetary nebulae</A></li>
 										<li><P>Bhattacharya, S., Arnaboldi, M., <b>Hartke, J.</b>, Gerhard, O., Comte, V., McConnachie, A., Harris, W. E. &amp; Caldwell, N. 2019, Astronomy and Astrophysics, <A href="https://ui.adsabs.harvard.edu/abs/2019A%26A...624A.132B/abstract">The survey of Planetary Nebulae in Andromeda (M31): I. Imaging the disk and halo with MegaCam@CFHT</A></li>
@@ -194,7 +189,7 @@
 										Gravitational Potential of a Cosmological Dark Matter Halo with Stellar
 										Streams</A></li>
 									</ul>
-								<h4> Conference Proceedings </h4>
+								<!-- <h4> Conference Proceedings </h4>
 							<ul class="alt">
 								<li><P><b>Hartke, J.</b> 2019, Light in the Suburbs: Structure and Chemodynamics of Galaxy Halos. Proceedings of the conference held 9-14 June, <A href="https://ui.adsabs.harvard.edu/abs/2019lssc.confE..18H">What are the progenitors of the intragroup light stars around M49?</A></li>
 								<li><P><b>Hartke, J.</b>, Arnaboldi, M., Longobardi, A., Gerhard, O., Freeman, K. &amp;
@@ -211,7 +206,7 @@
 								Astronomical Society Meeting Abstracts #225, <A
 								href="https://ui.adsabs.harvard.edu/#abs/2015AAS...22511902S">Inferring the
 								Galactic gravitational potential with Gaia and friends</A></li>
-							</ul>
+							</ul> -->
 							</div>
 							</section>
 
