--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 						<li><a href="#home" class="active">Home</a></li>
 						<li><a href="#about">About Me</a></li>
 						<li><a href="#research">Research</a></li>
-						<li><a href="#talks">Upcoming Talks</a></li>
+						<!-- <li><a href="#talks">Upcoming Talks</a></li> -->
 						<li><a href="#publications">Publications</a></li>
-						<li><a href="#opportunities">Opportunities for Students</a></li>
+						<!-- <li><a href="#opportunities">Opportunities for Students</a></li> -->
 						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</nav>
@@ -132,7 +132,7 @@
 							</section>
 
 							<!-- Four -->
-							<section id="talks">
+							<!-- <section id="talks">
 								<div class="container">
 									<h3>Upcoming Talks</h3>
 									<p>I am always happy to present my research at conferences or at institute seminars. In case you are interested to learn more about my current research, below is a list of upcoming talks: </p>
@@ -151,12 +151,12 @@
 												<td>Science at ESO: Galaxy halos </td>
 											</tr>
 										</tbody>
-										<tfoot>
+										<tfoot> -->
 											<!-- dummy -->
-										</tfoot>
+										<!-- </tfoot>
 									</table>
 								</div>
-								</section>
+								</section> -->
 
 
 							<!-- Five -->
@@ -211,7 +211,7 @@
 							</section>
 
 							<!-- Six -->
-								<section id="opportunities">
+								<!-- <section id="opportunities">
 									<div class="container">
 										<h3>Opportunities for Students</h3>
 										<article>
@@ -224,7 +224,7 @@
 											<p>Together with my collaborator Dr. Magda Arnaboldi, we off an ESO studentship project titled "The origin of the blue stellar halos around Massive Group-Dominant Galaxies". The project description can be found <a href="https://www.eso.org/sci/activities/thesis-topics/abstr-arnaboldi4.html">here</a> and general information regarding the ESO studentship is linked <a href="https://www.eso.org/sci/activities/FeSt-overview/ESOstudentship.html">here</a>.</p>
 										</article>
 									</div>
-								</section>
+								</section> -->
 
 
 
