Updated with new publication

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 						<!-- <li><a href="#talks">Upcoming Talks</a></li> -->
 						<li><a href="#publications">Publications</a></li>
 						<!-- <li><a href="#opportunities">Opportunities for Students</a></li> -->
+						<li><a href="#gallery">Gallery</a></li>
 						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</nav>
@@ -89,10 +90,13 @@
 												The galaxy M105 in the Leo I group has been at the centre of a long-standing debate on the dark matter (DM) content of early-type galaxies and is one of the poster children of the Planetary Nebula Spectrograph (PN.S) early-type galaxy survey. We have recently obtained more extended photometric and kinematic data to place better constraints on the assembly history of M105 and its group environment. The figure on the left shows the PNe detected in M105 and its companion spiral galaxy NGC 3384 colour-coded by their velocity.
 											</p>
 											<p>
-												We have performed a novel photo-kinematic decomposition of of our sample into two subcomponents associated with NGC 3384 and M105 using Gaussian Mixture Models and are currently investigating the presence and dynamics of intra-group light in this loose group of galaxies. These new data will also allow us to better constrain the matter content of M105 at large radii. First results are presented in Chapter 4 of my PhD thesis.
+												We have performed a novel photo-kinematic decomposition of of our sample into two subcomponents associated with NGC 3384 and M105 using Gaussian Mixture Models and are currently investigating the presence and dynamics of intra-group light in this loose group of galaxies. These new data will also allow us to better constrain the matter content of M105 at large radii. First results were presented in Chapter 4 of my PhD thesis.
 											</p>
+											<h5> I: Wide-field photometric survey of planetary nebulae in the Leo I group</h5>
+											<p><span class="image left"><img src="images/M105_final_fit.png" alt="From Hartke et al. (2020)" /></span>
+											In the first paper of the series, we focused on planetary nebulae candidates identified from Subaru SuprimeCam photometry. Combining the information from planetary nebulae, resolved red-giant branch stars, and integrated broad-band surface brightness profiles, we were able to identify a faint, exponentially distributed population of metal-poor stars in the outer halo of M105. For the first time, we were able to link the presence of this metal-poor population with an increase in the planetary nebula specific frequency, i.e. how many planetary nebulae there are per unit light. This establishes a missing link between metallicity and the post-AGB phases of stellar evolution.</p>
 											<ul class="actions fit">
-												<li><a href="https://edoc.ub.uni-muenchen.de/23027/1/Hartke_Johanna.pdf" class="button fit small disabled">Paper coming soon! Have a look at my thesis instead.</a></li>
+												<li><a href="https://ui.adsabs.harvard.edu/abs/2020arXiv200801696H" class="button alt fit small">Read the paper</a></li>
 											</ul>
 										</article>
 										<article>
@@ -172,6 +176,8 @@
 										</ul>
 										<h4> Refereed publications</h4>
 									<ul class="alt">
+										<li><P><b>Hartke, J.</b>, Arnaboldi, M., Gerhard, O., Coccato, L., Pulsoni, C., Freeman, K.C., Merrifield, M., Cortesi, A., and Kuijken, K. 2020, arXiv e-prints, <A href="https://ui.adsabs.harvard.edu/abs/2020arXiv200801696H">The halo of M105 and its group environment as traced by planetary nebula populations: I. Wide-field photometric survey of planetary nebulae in the Leo I group</A></li>
+
 										<li><P>Bhattacharya, S., Arnaboldi, M., Caldwell, N., Gerhard, O., Blaña, M., McConnachie, A., <b>Hartke, J.</b>, Guhathakurta, P., Pulsoni, C., and Freeman, K.C. 2019, Astronomy and Astrophysics, <A href="https://ui.adsabs.harvard.edu/abs/2019A&amp;A...631A..56B">The survey of planetary nebulae in Andromeda (M 31). II. Age-velocity dispersion relation in the disc from planetary nebulae</A></li>
 										<li><P>Bhattacharya, S., Arnaboldi, M., <b>Hartke, J.</b>, Gerhard, O., Comte, V., McConnachie, A., Harris, W. E. &amp; Caldwell, N. 2019, Astronomy and Astrophysics, <A href="https://ui.adsabs.harvard.edu/abs/2019A%26A...624A.132B/abstract">The survey of Planetary Nebulae in Andromeda (M31): I. Imaging the disk and halo with MegaCam@CFHT</A></li>
 										<li><P><b>Hartke, J.</b>, Arnaboldi, M., Gerhard, O., Agnello, A., Longobardi, A.,
@@ -226,10 +232,16 @@
 									</div>
 								</section> -->
 
+								<!-- Seven -->
+<!-- <section id="gallery">
+	<div class="container">
+		<h3>Gallery</h3>
+<p>I Since moving to Chile to I have discovered my passion for photography.  </p>
+	</div>
+</section> -->
 
-
-						<!-- Seven -->
-							<section id="contact">
+						<!-- Eight -->
+							<!-- <section id="contact">
 								<div class="container">
 									<h3>Contact</h3>
 									<ul class="feature-icons">
@@ -251,7 +263,7 @@
 
 
 
-					</div>
+					</div> -->
 
 				<!-- Footer -->
 					<section id="footer">
