Resurrected the contact section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<!-- <li><a href="#talks">Upcoming Talks</a></li> -->
 						<li><a href="#publications">Publications</a></li>
 						<!-- <li><a href="#opportunities">Opportunities for Students</a></li> -->
-						<li><a href="#gallery">Gallery</a></li>
+						<!-- <li><a href="#gallery">Gallery</a></li> -->
 						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</nav>
@@ -241,7 +241,7 @@
 </section> -->
 
 						<!-- Eight -->
-							<!-- <section id="contact">
+							<section id="contact">
 								<div class="container">
 									<h3>Contact</h3>
 									<ul class="feature-icons">
@@ -263,13 +263,13 @@
 
 
 
-					</div> -->
+					</div>
 
 				<!-- Footer -->
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Johanna Hartke. Updated July 2020. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Hosted by <a href:"https://pages.github.com">GitHub Pages</a></li>
+								<li>&copy; Johanna Hartke. Updated September 2020. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Hosted by <a href:"https://pages.github.com">GitHub Pages</a></li>
 							</ul>
 						</div>
 					</section>
