--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<!-- <li><a href="#talks">Upcoming Talks</a></li> -->
 						<li><a href="#publications">Publications</a></li>
 						<!-- <li><a href="#opportunities">Opportunities for Students</a></li> -->
-						<!-- <li><a href="#gallery">Gallery</a></li> -->
+						<li><a href="#gallery">Gallery</a></li>
 						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</nav>
@@ -68,7 +68,7 @@
 										<p>Born and raised in a small town in the north of Germany, I moved to Bremen to pursue a Bachelor of Science in Physics at Jacobs University (2010 - 2013). During my undergraduate, I had the chance to participate in the DAAD RISE worldwide internship programme. During my intership at the School of Astronomy and Astrophysics of the Australian National University my motivation to pursue a career in Astronomy was fostered. </p>
 										<p>For my Master of Science (2013 - 2015) I moved to the University of Groningen in the Netherlands, at whose Kapteyn Institute I had already completed parts of my Bachelor Research Project. There, I gained first observational experience during two observing runs with the Isaac Newton and William Herschel Telescopes at the Roque de los Muchachos, La Palma.</p>
 										<p><span class="image left"><img src="images/phdhat.jpg" width="50%" height="scale" alt="PhD hat" /></span>From 2015 to 2018 I was a PhD student at the European Southern Observatory as part of the International Max Planck Research School (IMPRS) on Astrophysics at the LMU Munich. I successfully defended my PhD thesis titled <a href="https://edoc.ub.uni-muenchen.de/23027/1/Hartke_Johanna.pdf"> "Substructures, accretion events, and diffuse intra-group light surrounding bright early-type galaxies"</a> in September 2018. In November 2018 I took up a postdoctoral fellowship at the European Southern Observatory in Santiago de Chile with observational duties at the Very Large Telescope at Paranal Observatory. There, I am support astronomer at UT4, as well as the instrument fellow for the MUSE integral-field spectrograph.</p>
-										When I am not working on my research projects, one is likely to find me rehearsing music. While living in Munich, I was a soprano in the Münchner Motettenchor <a href:"http://www.muenchner-motettenchor.de"> (MMC)</a>. I also enjoy swimming, bouldering, windsurfing, and reading. Since moving to Chile and marvelling at the southern skies, I took up (astro)photography. </p>
+										When I am not working on my research projects, one is likely to find me rehearsing music. While living in Munich, I was a soprano in the Münchner Motettenchor <a href:"http://www.muenchner-motettenchor.de"> (MMC)</a>. I also enjoy swimming, bouldering, windsurfing, and reading. Since moving to Chile and marvelling at the southern skies, I took up (astro)photography. Have a look at the gallery in the side bar!</p>
 									</article>
 									<ul class="actions">
 										<li><a href="cv_johanna_hartke.pdf" class="button primary icon fa-download">Download my Curriculum Vitae</a></li>
@@ -235,12 +235,13 @@
 								</section> -->
 
 								<!-- Seven -->
-<!-- <section id="gallery">
+<section id="gallery">
 	<div class="container">
 		<h3>Gallery</h3>
-<p>I Since moving to Chile to I have discovered my passion for photography.  </p>
-	</div>
-</section> -->
+<p>Since moving to Chile and regularly marvelling the southern skies, I have taken my first small steps in (astro)photography. Below you can see some of my favourite shots from Paranal on Flickr: </p>
+
+<a data-flickr-embed="true" data-header="true" data-footer="true" href="https://www.flickr.com/photos/191506401@N08" title=""><img src="https://live.staticflickr.com/65535/50729867627_76c098a342_z.jpg" width="640" height="480" alt=""></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+</section>
 
 						<!-- Eight -->
 							<section id="contact">
@@ -272,6 +273,10 @@
 						<div class="container">
 							<ul class="copyright">
 								<li>&copy; Johanna Hartke. Updated December 2020. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Hosted by <a href:"https://pages.github.com">GitHub Pages</a></li>
+							</ul>
+							<ul class='copyright'>
+								<li>This webpage contains links to third party pages. The creator of this webpage is not responsible for the content or information contained in any of the linked sites.
+								</li>
 							</ul>
 						</div>
 					</section>
