--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
 										</ul>
 										<h4> Refereed publications</h4>
 									<ul class="alt">
+										<li><P>Bhattacharya, S., Arnaboldi, M., Gerhard, O., McConnachie, A., Caldwell, N., <b>Hartke, J.</b>, and Freeman, K.C. 2021, Astronomy and Astrophysics, <A href="https://ui.adsabs.harvard.edu/abs/2021A&amp;A...647A.130B">The survey of planetary nebulae in Andromeda (M 31). III. Constraints from deep planetary nebula luminosity functions on the origin of the inner halo substructures in M 31</A></li>
 										<li><P><b>Hartke, J.</b>, Arnaboldi, M., Gerhard, O., Coccato, L., Pulsoni, C., Freeman, K.C., Merrifield, M., Cortesi, A., and Kuijken, K. 2020, Astronomy and Astrophysics, <A href="https://ui.adsabs.harvard.edu/abs/2020A&amp;A...642A..46H">The halo of M 105 and its group environment as traced by planetary nebula populations. I. Wide-field photometric survey of planetary nebulae in the Leo I group</A></li>
 										<li><P>Bhattacharya, S., Arnaboldi, M., Caldwell, N., Gerhard, O., Blaña, M., McConnachie, A., <b>Hartke, J.</b>, Guhathakurta, P., Pulsoni, C., and Freeman, K.C. 2019, Astronomy and Astrophysics, <A href="https://ui.adsabs.harvard.edu/abs/2019A&amp;A...631A..56B">The survey of planetary nebulae in Andromeda (M 31). II. Age-velocity dispersion relation in the disc from planetary nebulae</A></li>
 										<li><P>Bhattacharya, S., Arnaboldi, M., <b>Hartke, J.</b>, Gerhard, O., Comte, V., McConnachie, A., Harris, W. E. &amp; Caldwell, N. 2019, Astronomy and Astrophysics, <A href="https://ui.adsabs.harvard.edu/abs/2019A%26A...624A.132B/abstract">The survey of Planetary Nebulae in Andromeda (M31): I. Imaging the disk and halo with MegaCam@CFHT</A></li>
@@ -272,7 +273,7 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Johanna Hartke. Updated December 2020. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Hosted by <a href:"https://pages.github.com">GitHub Pages</a></li>
+								<li>&copy; Johanna Hartke. Updated June 2021. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Hosted by <a href:"https://pages.github.com">GitHub Pages</a></li>
 							</ul>
 							<ul class='copyright'>
 								<li>This webpage contains links to third party pages. The creator of this webpage is not responsible for the content or information contained in any of the linked sites.
