Updated instrumentation info and CV

--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Johanna Hartke</a></h1>
-					<p>Fellow at the European Southern Observatory in Chile</p>
+					<p>ESO Fellow at the University of Oxford</p>
+					<p>&bull; Galaxy formation and evolution &bull; Galaxy dynamics &bull; Planetary nebulae &bull; Integral-field spectroscopy &bull; Adaptive optics &bull; </p>
 				</header>
 				<nav id="nav">
 					<ul>
 						<li><a href="#home" class="active">Home</a></li>
 						<li><a href="#about">About Me</a></li>
 						<li><a href="#research">Research</a></li>
-						<!-- <li><a href="#talks">Upcoming Talks</a></li> -->
+						<li><a href="#instrumentation">Instrumentation</a></li>
 						<li><a href="#publications">Publications</a></li>
 						<!-- <li><a href="#opportunities">Opportunities for Students</a></li> -->
 						<li><a href="#gallery">Gallery</a></li>
@@ -55,7 +56,7 @@
 								<div class="container">
 									<header class="major">
 										<h2>Johanna Hartke</h2>
-										<p>Fellow at the <a href:"http://www.eso.org">European Southern Observatory</a> in Santiago de Chile.</p>
+										<p>Fellow at the <a href:"http://www.eso.org">European Southern Observatory</a> on secondment to the University of Oxford.</p>
 									</header>
 								</div>
 							</section>
@@ -67,8 +68,9 @@
 									<article>
 										<p>Born and raised in a small town in the north of Germany, I moved to Bremen to pursue a Bachelor of Science in Physics at Jacobs University (2010 - 2013). During my undergraduate, I had the chance to participate in the DAAD RISE worldwide internship programme. During my intership at the School of Astronomy and Astrophysics of the Australian National University my motivation to pursue a career in Astronomy was fostered. </p>
 										<p>For my Master of Science (2013 - 2015) I moved to the University of Groningen in the Netherlands, at whose Kapteyn Institute I had already completed parts of my Bachelor Research Project. There, I gained first observational experience during two observing runs with the Isaac Newton and William Herschel Telescopes at the Roque de los Muchachos, La Palma.</p>
-										<p><span class="image left"><img src="images/phdhat.jpg" width="50%" height="scale" alt="PhD hat" /></span>From 2015 to 2018 I was a PhD student at the European Southern Observatory as part of the International Max Planck Research School (IMPRS) on Astrophysics at the LMU Munich. I successfully defended my PhD thesis titled <a href="https://edoc.ub.uni-muenchen.de/23027/1/Hartke_Johanna.pdf"> "Substructures, accretion events, and diffuse intra-group light surrounding bright early-type galaxies"</a> in September 2018. In November 2018 I took up a postdoctoral fellowship at the European Southern Observatory in Santiago de Chile with observational duties at the Very Large Telescope at Paranal Observatory. There, I am a support astronomer at UT4, as well as the instrument fellow for the MUSE integral-field spectrograph. You can read more about my time as an ESO fellow and my journey into astronomy in my <a href="http://doi.eso.org/10.18727/0722-6691/5182"> Fellow profile in the ESO Messenger</a>.</p>
-										When I am not working on my research projects, one is likely to find me rehearsing music. While living in Munich, I was a soprano in the Münchner Motettenchor <a href="http://www.muenchner-motettenchor.de"> (MMC)</a>. I also enjoy swimming, bouldering, windsurfing, and reading. Since moving to Chile and marvelling at the southern skies, I took up (astro)photography. Have a look at the <a href="#gallery"> gallery</a> on this webpage</p>
+										<p><span class="image left"><img src="images/phdhat.jpg" width="50%" height="scale" alt="PhD hat" /></span>From 2015 to 2018 I was a PhD student at the European Southern Observatory as part of the International Max Planck Research School (IMPRS) on Astrophysics at the LMU Munich. I successfully defended my PhD thesis titled <a href="https://edoc.ub.uni-muenchen.de/23027/1/Hartke_Johanna.pdf"> "Substructures, accretion events, and diffuse intra-group light surrounding bright early-type galaxies"</a> in September 2018. In November 2018 I took up a postdoctoral fellowship at the European Southern Observatory in Santiago de Chile with observational duties at the Very Large Telescope at Paranal Observatory. Until late 2021, I was a support astronomer at UT4, as well as the instrument fellow for the MUSE integral-field spectrograph. You can read more about my time as an ESO fellow and my journey into astronomy in my <a href="http://doi.eso.org/10.18727/0722-6691/5182"> Fellow profile in the ESO Messenger</a>.
+										Since October 2021, I am on secondment to the Sub-department of Astrophysics at the University of Oxford, where I am spending the final year of my ESO fellowship. </p>
+										When I am not working on my research projects, one is likely to find me rehearsing music. While living in Munich, I was a soprano in the Münchner Motettenchor <a href="http://www.muenchner-motettenchor.de"> (MMC)</a>. Currently, I am singing in the Wadham College Chapel Choir and the Oxford Bach Choir. I also enjoy swimming, bouldering, windsurfing, and reading. Since moving to Chile and marvelling at the southern skies, I took up (astro)photography. Have a look at the <a href="#gallery"> gallery</a> on this webpage</p>
 									</article>
 									<ul class="actions">
 										<li><a href="cv_johanna_hartke.pdf" class="button primary icon fa-download">Download my Curriculum Vitae</a></li>
@@ -82,7 +84,7 @@
 							<section id="research">
 								<div class="container">
 									<h3>Research</h3>
-									<p>I am interested in the formation, evolution, and dynamics of galaxies ranging from our own Milky Way to the most massive galaxies found at the centres of galaxy clusters. In my <a href="https://edoc.ub.uni-muenchen.de/23027/1/Hartke_Johanna.pdf"> PhD research</a> I started using Planetary Nebulae (PNe) as kinematic tracers for the build-up of the extended halos of massive early-type galaxies. Below is a selection of current and past research projects that I have been involved in. </p>
+									<p>I am interested in the formation, evolution, and dynamics of galaxies ranging from our own Milky Way to the most massive galaxies found at the centres of galaxy clusters. In my <a href="https://edoc.ub.uni-muenchen.de/23027/1/Hartke_Johanna.pdf"> PhD research</a> I started using Planetary Nebulae (PNe) as kinematic tracers for the build-up of the extended halos of massive early-type galaxies and the interplay with the intra-cluster light. Below is a selection of current and past research projects that I have been involved in. </p>
 									<div class="features">
 										<article>
 											<h4>The halo of M105 and its group environment as traced by planetary nebulae populations</h4>
@@ -139,31 +141,23 @@
 							</section>
 
 							<!-- Four -->
-							<!-- <section id="talks">
+							<section id="talks">
 								<div class="container">
-									<h3>Upcoming Talks</h3>
-									<p>I am always happy to present my research at conferences or at institute seminars. In case you are interested to learn more about my current research, below is a list of upcoming talks: </p>
-									<table>
-										<thead>
-											<tr>
-												<th>When?</th>
-												<th>Where?</th>
-												<th>What?</th>
-											</tr>
-										</thead>
-										<tbody>
-											<tr>
-												<td>7 February 2020</td>
-												<td>La Silla Observing School lecture</td>
-												<td>Science at ESO: Galaxy halos </td>
-											</tr>
-										</tbody>
-										<tfoot> -->
-											<!-- dummy -->
-										<!-- </tfoot>
-									</table>
+									<h3>Instrumentation</h3>
+									<article>
+									<p><span class="image left"><img style="max-width: 450px" src="images/ut4_lasers.jpg" alt="UT4 with the lasers of the Adaptive Optics Facility." /></span>I have supported more than a hundred nights of observations with the MUSE integral-field spectrograph and have a solid background in planning, executing, and reducing observations with integral-field units (IFUs). As MUSE instrument fellow, I have lead a major study on the performance of the Adaptive Optics (AO) system GALACSI, analysing a massive data set consisting of multi-period wide-field and narrow-field mode observations. Our main findings can be found in the MUSE user manual for planning observations and are also summarised as Proceedings of SPIE:</p>
+
+
+										<ul class="actions fit">
+											<li><a href="https://ui.adsabs.harvard.edu/?#abs/2017ApJ...836..234S" class="button primary fit small">Read the paper</a></li>
+										</ul>
+
+
+									<p>I have actively participated in commissioning the upgraded InfraRed Low-Order wavefront Sensor (IRLOS) that now allows scientists to conduct observations in narrow-field mode (NFM) with much fainter AO guide stars. My main contributions were twofold: (i) the selection of adequate targets and AO guide stars in preparation for and during the commissioning and (ii) the reduction and post-processing of large amounts of IFU data on the fly, with the goal of establishing correlations between AO performance and observing conditions.</p>
+								</article>
+
 								</div>
-								</section> -->
+								</section>
 
 
 							<!-- Five -->
@@ -179,6 +173,7 @@
 										</ul>
 										<h4> Refereed publications</h4>
 									<ul class="alt">
+										<li><P>Gran, F., Zoccali, M., Saviane, I., Valenti, E., Rojas-Arriagada, A., Ramos, R.C., <b>Hartke, J.</b>, Carballo-Bello, J.A., Navarrete, C., Rejkuba, M., and Carvajal, J.O. 2021, Monthly Notices of the Royal Astronomical Society, <A href="https://ui.adsabs.harvard.edu/abs/2021MNRAS.tmp.2477G">Hidden in the Haystack: Low-luminosity globular clusters towards the Milky Way bulge</A></li>
 										<li><P>Bhattacharya, S., Arnaboldi, M., Gerhard, O., McConnachie, A., Caldwell, N., <b>Hartke, J.</b>, and Freeman, K.C. 2021, Astronomy and Astrophysics, <A href="https://ui.adsabs.harvard.edu/abs/2021A&amp;A...647A.130B">The survey of planetary nebulae in Andromeda (M 31). III. Constraints from deep planetary nebula luminosity functions on the origin of the inner halo substructures in M 31</A></li>
 										<li><P><b>Hartke, J.</b>, Arnaboldi, M., Gerhard, O., Coccato, L., Pulsoni, C., Freeman, K.C., Merrifield, M., Cortesi, A., and Kuijken, K. 2020, Astronomy and Astrophysics, <A href="https://ui.adsabs.harvard.edu/abs/2020A&amp;A...642A..46H">The halo of M 105 and its group environment as traced by planetary nebula populations. I. Wide-field photometric survey of planetary nebulae in the Leo I group</A></li>
 										<li><P>Bhattacharya, S., Arnaboldi, M., Caldwell, N., Gerhard, O., Blaña, M., McConnachie, A., <b>Hartke, J.</b>, Guhathakurta, P., Pulsoni, C., and Freeman, K.C. 2019, Astronomy and Astrophysics, <A href="https://ui.adsabs.harvard.edu/abs/2019A&amp;A...631A..56B">The survey of planetary nebulae in Andromeda (M 31). II. Age-velocity dispersion relation in the disc from planetary nebulae</A></li>
@@ -239,7 +234,7 @@
 <section id="gallery">
 	<div class="container">
 		<h3>Gallery</h3>
-<p>Since moving to Chile and regularly marvelling the southern skies, I have taken my first small steps in (astro)photography. Below you can see some of my favourite shots from Paranal on Flickr: </p>
+<p>Since moving to Chile and regularly marvelling the southern skies, I have taken my first small steps in (astro)photography. Below you can see some of my favourite shots from the observatories on Paranal and La Silla (both in Chile), and the Roque de Los Muchachos (La Palma, Spain) on Flickr: </p>
 
 <a data-flickr-embed="true" data-header="true" data-footer="true" href="https://www.flickr.com/photos/191506401@N08" title=""><img src="https://live.staticflickr.com/65535/50729867627_76c098a342_z.jpg" width="640" height="480" alt=""></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
 </section>
@@ -250,14 +245,16 @@
 									<h3>Contact</h3>
 									<ul class="feature-icons">
 										<li class="fa-globe"><div class="address">
-																			  <div><b>Dr. Johanna Hartke</b></div>
-																			  <div>European Southern Observatory</div>
-																			  <div>Alonso de C&oacute;rdova 3107</div>
-																				<div>Vitacura, Casilla 19001</div>
-																				<div>Santiago de Chile</div>
+																			  <div><b>Dr Johanna Hartke</b></div>
+																			  <div>ESO Fellow</div>
+																			  <div>Sub-department of Astrophysics</div>
+																				<div>University of Oxford</div>
+																				<div>Denys Wilkinson Building</div>
+																				<div>Keble Road</div>
+																				<div>Oxford OX1 3RH, UK </div>
 																			</div></li>
-										<li class="fa-phone">+56 2 2463 3259</li>
 										<li class="fa-envelope"><a href="mailto:jhartke@eso.org">jhartke@eso.org</a></li>
+										<li class="fa-envelope"><a href="mailto:johanna.hartke@physics.ox.ac.uk">johanna.hartke@physics.ox.ac.uk</a></li>
 										<li class="fa-skype">j.hartke</li>
 										<li class="fa-twitter"><a href="https://twitter.com/johannahartke">@JohannaHartke</a></li>
 										<li class="fa-github"><a href="https://github.com/jhartke">jhartke</a></li>
@@ -273,7 +270,7 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Johanna Hartke. Updated June 2021. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Hosted by <a href:"https://pages.github.com">GitHub Pages</a></li>
+								<li>&copy; Johanna Hartke. Updated November 2021. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Hosted by <a href:"https://pages.github.com">GitHub Pages</a></li>
 							</ul>
 							<ul class='copyright'>
 								<li>This webpage contains links to third party pages. The creator of this webpage is not responsible for the content or information contained in any of the linked sites.
