--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 										<p>For my Master of Science (2013 - 2015) I moved to the University of Groningen in the Netherlands, at whose Kapteyn Institute I had already completed parts of my Bachelor Research Project. There, I gained first observational experience during two observing runs with the Isaac Newton and William Herschel Telescopes at the Roque de los Muchachos, La Palma.</p>
 										<p><span class="image left"><img src="images/phdhat.jpg" width="50%" height="scale" alt="PhD hat" /></span>From 2015 to 2018 I was a PhD student at the European Southern Observatory as part of the International Max Planck Research School (IMPRS) on Astrophysics at the LMU Munich. I successfully defended my PhD thesis titled <a href="https://edoc.ub.uni-muenchen.de/23027/1/Hartke_Johanna.pdf"> "Substructures, accretion events, and diffuse intra-group light surrounding bright early-type galaxies"</a> in September 2018. In November 2018 I took up a postdoctoral fellowship at the European Southern Observatory in Santiago de Chile with observational duties at the Very Large Telescope at Paranal Observatory. Until late 2021, I was a support astronomer at UT4, as well as the instrument fellow for the MUSE integral-field spectrograph. You can read more about my time as an ESO fellow and my journey into astronomy in my <a href="http://doi.eso.org/10.18727/0722-6691/5182"> Fellow profile in the ESO Messenger</a>.
 										Since October 2021, I am on secondment to the Sub-department of Astrophysics at the University of Oxford, where I am spending the final year of my ESO fellowship. </p>
-										When I am not working on my research projects, one is likely to find me rehearsing music. While living in Munich, I was a soprano in the Münchner Motettenchor <a href="http://www.muenchner-motettenchor.de"> (MMC)</a>. Currently, I am singing in the Wadham College Chapel Choir and the Oxford Bach Choir. I also enjoy swimming, bouldering, windsurfing, and reading. Since moving to Chile and marvelling at the southern skies, I took up (astro)photography. Have a look at the <a href="#gallery"> gallery</a> on this webpage</p>
+										When I am not working on my research projects, one is likely to find me rehearsing music. While living in Munich, I was a soprano in the Münchner Motettenchor <a href="http://www.muenchner-motettenchor.de"> (MMC)</a>. Currently, I am singing in the Wadham College Chapel Choir and the Oxford Bach Choir <a href="https://www.oxfordbachchoir.org"> (OBC)</a>. I also enjoy swimming, bouldering, windsurfing, and reading. Since moving to Chile and marvelling at the southern skies, I took up (astro)photography. Have a look at the <a href="#gallery"> gallery</a> on this webpage</p>
 									</article>
 									<ul class="actions">
 										<li><a href="cv_johanna_hartke.pdf" class="button primary icon fa-download">Download my Curriculum Vitae</a></li>
@@ -141,7 +141,7 @@
 							</section>
 
 							<!-- Four -->
-							<section id="talks">
+							<section id="instrumentation">
 								<div class="container">
 									<h3>Instrumentation</h3>
 									<article>
